--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <main>
         <canvas id="myChart"></canvas>
     </main>
+    <main>
+        <canvas id="newChart"></canvas>
+    </main>
     
 </body>
 </html>
